[package]
name = "azfunction"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.4", features = ["full"] }
warp = "0.3.7"
azure_storage = { version = "0.20" }
azure_core = { version = "0.20" }
azure_storage_datalake = { version = "0.20" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
azure_identity = "0.20.0"
azure_security_keyvault = "0.20.0"
